k8s/deployment/04-mongodb/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mongo
  labels:
    app: mongodb
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
