k8s/deployment/04-mongodb/mongodb-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-networkpolicy
  namespace: mongo
  labels:
    app: mongodb
    tier: database
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            component: content
      - namespaceSelector:
          matchLabels:
            component: central
      ports:
        - protocol: TCP
          port: 27017
  egress:
    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              name: kube-system
      ports:
        - protocol: UDP
          port: 53
    # Postgres central (si ETL/servicios la consultan)
    - to:
        - namespaceSelector:
            matchLabels:
              component: central
      ports:
        - protocol: TCP
          port: 5432
